[package]
name = "quad-gamepad"
version = "0.2.0"
authors = ["jice <jice.nospam@gmail.com>, fedor <not.fl3@gmail.com>"]
keywords = ["gamepad", "joystick", "input"]
edition = "2018"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winerror", "xinput"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.5.1"
IOKit-sys = {git="https://github.com/edwin0cheng/iokit-sys.git"}
libc = "0.2"
