[package]
name = "quad-gamepad"
version = "0.2.0-alpha"
authors = ["jice <jice.nospam@gmail.com>, fedor <not.fl3@gmail.com>"]
keywords = ["gamepad", "joystick", "input"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Light-weight and opinionated gamepad handling libarary."

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winerror", "xinput"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
libc = "0.2"
